# TFTPServer

./: .gitignore  Parse.cs  Program.cs  TFTP.cs  TFTPServer.csproj  TFTPServer.sln
dotnet/: .gitignore  ParseException.cs  Program.cs  TFTP.cs  TFTPServer.csproj  dotnet.sln
go/: go.mod  main  main.go  tftpsrv
rust/: Cargo.toml  buildMIPS.sh  cross_compile_mips.txt
rust/.cargo/: config.toml
rust/src/: main.rs
