[package]
name = "tftpd_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
thiserror = "1.0.56"

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'

[profile.minsize]
inherits = "release"
strip = true
opt-level = "z"
panic = 'abort'
lto = true
codegen-units = 1
